@@ -9,21 +9,23 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.CsvSource;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
-import static model.card.vo.PlayingCard.makeCard;
+import static model.card.vo.PlayingCard.of;
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 
 class DealerTest {
     @ParameterizedTest
-    @DisplayName("isScoreLessThan16() 호출 시, 카드가 16 이하이면 true 를 반환한다.")
+    @DisplayName("canDrawCard() 호출 시, 카드가 16 이하이면 true 를 반환한다.")
     @CsvSource(value = {"NINE:true", "JACK:false"},delimiter = ':')
     void setUpStartingCards(final Number inputtedNumber,final boolean expect) {
         //given
-        Dealer dealer = new Dealer(List.of(makeCard(Suit.HEART, Number.SEVEN), makeCard(Suit.HEART, inputtedNumber)));
+        Dealer dealer = new Dealer(List.of(of(Suit.HEART, Number.SEVEN), of(Suit.HEART, inputtedNumber)));
 
         //when
-        boolean actual = dealer.isScoreLessThan16();
+        boolean actual = dealer.canDrawCard();
 
         //then
         assertThat(actual).isEqualTo(expect);
@@ -33,10 +35,11 @@ class DealerTest {
     @DisplayName("draw() 호출 시, 카드 한장을 받아 리스트에 추가한다.")
     void draw() {
         //given
-        Dealer dealer = new Dealer(List.of(makeCard(Suit.HEART, Number.SEVEN), makeCard(Suit.HEART, Number.TWO)));
-        PlayingCard inputtedCard = makeCard(Suit.SPADE, Number.KING);
+        Dealer dealer = new Dealer(
+                new ArrayList<>(Arrays.asList(of(Suit.HEART, Number.SEVEN), of(Suit.HEART, Number.TWO))));
+        PlayingCard inputtedCard = of(Suit.SPADE, Number.KING);
         List<PlayingCard> expect = List.of(
-                makeCard(Suit.HEART, Number.SEVEN), makeCard(Suit.HEART, Number.TWO), makeCard(Suit.SPADE, Number.KING)
+                of(Suit.HEART, Number.SEVEN), of(Suit.HEART, Number.TWO), of(Suit.SPADE, Number.KING)
         );
 
         //when
@@ -50,7 +53,7 @@ class DealerTest {
     @DisplayName("getScore() 호출 시, 딜러의 스코어를 반환한다.")
     void getScore() {
         //given
-        Dealer dealer = new Dealer(List.of(makeCard(Suit.HEART, Number.SEVEN), makeCard(Suit.HEART, Number.TWO)));
+        Dealer dealer = new Dealer(List.of(of(Suit.HEART, Number.SEVEN), of(Suit.HEART, Number.TWO)));
         int expectedScore = 9;
 
         //when
@@ -64,8 +67,8 @@ class DealerTest {
     @DisplayName("getCards() 호출 시, 카드를 모두 반환한다.")
     void getCards() {
         //given
-        Dealer dealer = new Dealer(List.of(makeCard(Suit.HEART, Number.SEVEN), makeCard(Suit.HEART, Number.TWO)));
-        Cards expect = new Cards(List.of(makeCard(Suit.HEART, Number.SEVEN), makeCard(Suit.HEART, Number.TWO)));
+        Dealer dealer = new Dealer(List.of(of(Suit.HEART, Number.SEVEN), of(Suit.HEART, Number.TWO)));
+        Cards expect = new Cards(List.of(of(Suit.HEART, Number.SEVEN), of(Suit.HEART, Number.TWO)));
 
         //when
         Cards actualCards = dealer.getCards();
